--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1976,16 +1976,20 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(77 100 141 / var(--tw-bg-opacity));
 }
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
 .bg-primary-700 {
   background-color: var(--primary-plum-700);
 }
 .bg-grey-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 247 / var(--tw-bg-opacity));
-}
-.bg-sage-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(149 167 170 / var(--tw-bg-opacity));
 }
 .bg-red-400 {
   --tw-bg-opacity: 1;
@@ -2214,6 +2218,9 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+.pr-\[15px\] {
+  padding-right: 15px;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
@@ -3305,6 +3312,10 @@ video {
 .active\:ring-offset-primary-600:active {
   --tw-ring-offset-color: var(--primary-plum-600);
 }
+.disabled\:bg-primary-500:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(141 92 92 / var(--tw-bg-opacity));
+}
 .disabled\:bg-neutral-200:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(239 236 238 / var(--tw-bg-opacity));
@@ -3759,6 +3770,9 @@ video {
   }
   .tablet\:justify-between {
     justify-content: space-between;
+  }
+  .tablet\:gap-4 {
+    gap: 1rem;
   }
   .tablet\:gap-x-5 {
     -moz-column-gap: 1.25rem;
@@ -4473,6 +4487,9 @@ video {
   .desktop\:col-span-12 {
     grid-column: span 12 / span 12;
   }
+  .desktop\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
   .desktop\:col-start-2 {
     grid-column-start: 2;
   }
@@ -4493,6 +4510,9 @@ video {
   }
   .desktop\:col-start-3 {
     grid-column-start: 3;
+  }
+  .desktop\:col-start-5 {
+    grid-column-start: 5;
   }
   .desktop\:col-end-\[8\] {
     grid-column-end: 8;
@@ -4593,6 +4613,9 @@ video {
   .desktop\:w-\[850px\] {
     width: 850px;
   }
+  .desktop\:w-full {
+    width: 100%;
+  }
   .desktop\:min-w-\[1265px\] {
     min-width: 1265px;
   }
@@ -4631,6 +4654,9 @@ video {
   }
   .desktop\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .desktop\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .desktop\:flex-row {
     flex-direction: row;
