--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -768,6 +768,12 @@ video {
 .left-\[50\%\] {
   left: 50%;
 }
+.bottom-6 {
+  bottom: 1.5rem;
+}
+.right-8 {
+  right: 2rem;
+}
 .top-\[13\%\] {
   top: 13%;
 }
@@ -867,12 +873,6 @@ video {
 .left-\[10px\] {
   left: 10px;
 }
-.bottom-6 {
-  bottom: 1.5rem;
-}
-.right-6 {
-  right: 1.5rem;
-}
 .bottom-\[-50px\] {
   bottom: -50px;
 }
@@ -911,6 +911,15 @@ video {
 }
 .top-\[64px\] {
   top: 64px;
+}
+.top-1 {
+  top: 0.25rem;
+}
+.top-\[-8px\] {
+  top: -8px;
+}
+.top-\[-10px\] {
+  top: -10px;
 }
 .z-10 {
   z-index: 10;
@@ -1231,6 +1240,9 @@ video {
 .h-\[200px\] {
   height: 200px;
 }
+.h-14 {
+  height: 3.5rem;
+}
 .h-\[54px\] {
   height: 54px;
 }
@@ -1261,9 +1273,6 @@ video {
 .h-\[22px\] {
   height: 22px;
 }
-.h-14 {
-  height: 3.5rem;
-}
 .h-\[20px\] {
   height: 20px;
 }
@@ -1287,6 +1296,9 @@ video {
 }
 .h-\[57px\] {
   height: 57px;
+}
+.h-16 {
+  height: 4rem;
 }
 .max-h-60 {
   max-height: 15rem;
@@ -1329,6 +1341,12 @@ video {
 }
 .w-\[1161px\] {
   width: 1161px;
+}
+.w-14 {
+  width: 3.5rem;
+}
+.w-\[18px\] {
+  width: 18px;
 }
 .w-\[125px\] {
   width: 125px;
@@ -1384,9 +1402,6 @@ video {
 .w-\[22px\] {
   width: 22px;
 }
-.w-14 {
-  width: 3.5rem;
-}
 .w-\[20px\] {
   width: 20px;
 }
@@ -1422,6 +1437,18 @@ video {
 }
 .w-screen {
   width: 100vw;
+}
+.w-16 {
+  width: 4rem;
+}
+.w-\[16px\] {
+  width: 16px;
+}
+.w-\[14px\] {
+  width: 14px;
+}
+.w-\[12px\] {
+  width: 12px;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -1654,6 +1681,26 @@ video {
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+.animate-fadeIn {
+  -webkit-animation: fadeIn 300ms ease-in-out;
+          animation: fadeIn 300ms ease-in-out;
 }
 @-webkit-keyframes spin {
   to {
@@ -1911,6 +1958,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(141 92 92 / var(--tw-bg-opacity));
 }
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
 .bg-teal-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(45 212 191 / var(--tw-bg-opacity));
@@ -2006,10 +2057,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(217 229 229 / var(--tw-bg-opacity));
 }
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
 .bg-primary-50 {
   background-color: var(--primary-plum-50);
 }
@@ -2032,6 +2079,10 @@ video {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
 }
 .bg-contain {
   background-size: contain;
@@ -2618,13 +2669,13 @@ video {
   --tw-text-opacity: 1;
   color: rgb(64 71 100 / var(--tw-text-opacity));
 }
-.text-grey-800 {
-  --tw-text-opacity: 1;
-  color: rgb(33 40 55 / var(--tw-text-opacity));
-}
 .text-grey-400 {
   --tw-text-opacity: 1;
   color: rgb(157 163 175 / var(--tw-text-opacity));
+}
+.text-grey-800 {
+  --tw-text-opacity: 1;
+  color: rgb(33 40 55 / var(--tw-text-opacity));
 }
 .text-neutral-400 {
   --tw-text-opacity: 1;
@@ -3126,6 +3177,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(105 151 151 / var(--tw-bg-opacity));
 }
+.hover\:bg-slate-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
 .hover\:text-sage-300:hover {
   --tw-text-opacity: 1;
   color: rgb(179 192 193 / var(--tw-text-opacity));
@@ -3154,6 +3209,16 @@ video {
 .hover\:shadow-et_4:hover {
   --tw-shadow: 0px 40px 50px rgba(0, 0, 0, 0.2);
   --tw-shadow-colored: 0px 40px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-sm:hover {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .hover\:ring:hover {
