--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1149,6 +1149,12 @@ video {
 .row-span-4 {
   grid-row: span 4 / span 4;
 }
+.row-\[date\] {
+  grid-row: date;
+}
+.row-\[title\] {
+  grid-row: title;
+}
 .row-start-1 {
   grid-row-start: 1;
 }
@@ -1215,6 +1221,14 @@ video {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+.mx-\[-20px\] {
+  margin-left: -20px;
+  margin-right: -20px;
+}
+.mx-\[10px\] {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .mx-5 {
   margin-left: 1.25rem;
@@ -1699,6 +1713,12 @@ video {
 .max-w-\[1340px\] {
   max-width: 1340px;
 }
+.max-w-\[375px\] {
+  max-width: 375px;
+}
+.max-w-\[625px\] {
+  max-width: 625px;
+}
 .max-w-\[300px\] {
   max-width: 300px;
 }
@@ -2010,6 +2030,9 @@ video {
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
+.self-end {
+  align-self: flex-end;
+}
 .overflow-auto {
   overflow: auto;
 }
@@ -2205,6 +2228,9 @@ video {
 .bg-primary-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(205 167 167 / var(--tw-bg-opacity));
+}
+.bg-lfm-pink-200 {
+  background-color: var(--lfm-pink-200);
 }
 .bg-slate-900 {
   --tw-bg-opacity: 1;
@@ -2438,6 +2464,10 @@ video {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -2569,6 +2599,12 @@ video {
 .pt-\[68px\] {
   padding-top: 68px;
 }
+.pt-\[25px\] {
+  padding-top: 25px;
+}
+.pb-\[40px\] {
+  padding-bottom: 40px;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -2613,6 +2649,9 @@ video {
 }
 .font-sentinel__SemiBoldItal {
   font-family: Sentinel SemiBoldItal, serif;
+}
+.font-sentinel__Book {
+  font-family: Sentinel Book, serif;
 }
 .text-6xl {
   font-size: 3.75rem;
@@ -2673,6 +2712,10 @@ video {
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
+}
+.text-display-1 {
+  font-size: 4rem;
+  line-height: 4.5rem;
 }
 .text-display-2 {
   font-size: 3.375rem;
@@ -2848,6 +2891,14 @@ video {
 .text-slate-700 {
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+.text-lfm-pink-400 {
+  --tw-text-opacity: 1;
+  color: rgb(176 131 131 / var(--tw-text-opacity));
+}
+.text-lfm-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(53 84 109 / var(--tw-text-opacity));
 }
 .text-navy-700 {
   --tw-text-opacity: 1;
@@ -3367,6 +3418,35 @@ video {
 .selection\:text-teal-900::selection {
   --tw-text-opacity: 1;
   color: rgb(19 78 74 / var(--tw-text-opacity));
+}
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+.before\:bottom-0::before {
+  content: var(--tw-content);
+  bottom: 0px;
+}
+.before\:left-0::before {
+  content: var(--tw-content);
+  left: 0px;
+}
+.before\:h-\[30px\]::before {
+  content: var(--tw-content);
+  height: 30px;
+}
+.before\:w-full::before {
+  content: var(--tw-content);
+  width: 100%;
+}
+.before\:bg-white::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
 }
 .after\:bottom-\[-16px\]::after {
   content: var(--tw-content);
@@ -5063,11 +5143,11 @@ video {
   .desktop\:col-span-7 {
     grid-column: span 7 / span 7;
   }
-  .desktop\:col-span-12 {
-    grid-column: span 12 / span 12;
-  }
   .desktop\:col-span-6 {
     grid-column: span 6 / span 6;
+  }
+  .desktop\:col-span-12 {
+    grid-column: span 12 / span 12;
   }
   .desktop\:col-start-2 {
     grid-column-start: 2;
@@ -5508,6 +5588,64 @@ video {
   opacity: 1;
   transition: opacity .3s;
 }
+.lfm-intro__cardsContent {
+  position: absolute;
+  top: 0;
+  left: 280px;
+  transform: translateX(-50%);
+  width: 667px;
+  display: grid;
+  grid-template-columns:
+    minmax(20px, 166px) minmax(20px, 30px) minmax(20px, 185px)
+    minmax(20px, 80px) minmax(20px, 140px) auto;
+  grid-template-rows: auto auto minmax(10px, 10px) minmax(10px, 10px) 1fr;
+}
+.lfm-intro__font {
+  width: 196px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0 30px 30px rgb(0 0 0 / 13%);
+}
+.lfm-intro__font:first-child {
+    grid-row: 2/4;
+    grid-column: 1/3;
+    height: 138px;
+    width: 208px;
+    background: transparent;
+  }
+.lfm-intro__font:nth-child(2) {
+    height: 138px; /*177px*/
+    width: 265px;
+    grid-row: 1/4;
+    grid-column: 3/5;
+    background: transparent;
+  }
+.lfm-intro__font:nth-child(3) {
+    height: 111px;
+    background: transparent;
+    grid-column: 1/2;
+    grid-row: 4;
+    width: auto;
+  }
+.lfm-intro__font:nth-child(4) {
+    height: 143px;
+    width: 215px;
+    background: transparent;
+    grid-row: 3/6;
+    grid-column: 2/4;
+  }
+.lfm-intro__font:nth-child(5) {
+    grid-row: 3/6;
+    grid-column: 4/6;
+    background: transparent;
+    width: 100%;
+  }
+.lfm-intro__header {
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-rows: [title] auto [date] auto auto;
+  padding: 0 20px;
+}
 .root,
 :root,
 #docs-root {
@@ -5539,6 +5677,7 @@ video {
   --grey-600: #4d5561;
   --grey-700: #384050;
   --grey-800: #212837;
+  --lfm-pink-200: #fae7e7;
 }
 @font-face {
   font-family: "Sentinel Book";
