--- a/styles/app.css
+++ b/styles/app.css
@@ -9,6 +9,7 @@
 @import "../app/components/blog/blog.css";
 @import "../app/components/nav/nav.css";
 @import "react-lazy-load-image-component/src/effects/blur.css";
+@import "../app/components/lfm/lfm.css";
 
 .root,
 :root,
@@ -41,6 +42,7 @@
   --grey-600: #4d5561;
   --grey-700: #384050;
   --grey-800: #212837;
+  --lfm-pink-200: #fae7e7;
 }
 
 @font-face {
