--- a/app/components/lfm/lfm.css
+++ b/app/components/lfm/lfm.css
@@ -9,6 +9,21 @@
     minmax(20px, 166px) minmax(20px, 30px) minmax(20px, 185px)
     minmax(20px, 80px) minmax(20px, 140px) auto;
   grid-template-rows: auto auto minmax(10px, 10px) minmax(10px, 10px) 1fr;
+
+  @media only screen and (min-width: 768px) {
+    position: relative;
+    top: auto;
+    left: auto;
+    transform: translateX(0);
+    width: auto;
+    max-width: 768px;
+    margin: 0 auto;
+    grid-template-columns: minmax(66px, 66px) auto auto auto auto;
+    grid-template-rows: 25px 37px minmax(10px, 110px) minmax(10px, 70px) 1fr minmax(
+        10px,
+        10px
+      );
+  }
 }
 
 .lfm-intro__font {
@@ -23,6 +38,15 @@
     height: 138px;
     width: 208px;
     background: transparent;
+
+    @media only screen and (min-width: 768px) {
+      min-width: 264px;
+      min-height: 145px;
+      width: 100%;
+      height: 100%;
+      grid-column: 1/3;
+      grid-row: 1/4;
+    }
   }
 
   &:nth-child(2) {
@@ -31,6 +55,13 @@
     grid-row: 1/4;
     grid-column: 3/5;
     background: transparent;
+    @media only screen and (min-width: 768px) {
+      grid-column: 4/6;
+      grid-row: 2/4;
+      min-width: 228px;
+      height: 100%;
+      width: 100%;
+    }
   }
   &:nth-child(3) {
     height: 111px;
@@ -38,6 +69,12 @@
     grid-column: 1/2;
     grid-row: 4;
     width: auto;
+    @media only screen and (min-width: 768px) {
+      grid-column: 2/3;
+      grid-row: 4/7;
+      height: auto;
+      min-height: 131px;
+    }
   }
   &:nth-child(4) {
     height: 143px;
@@ -45,12 +82,24 @@
     background: transparent;
     grid-row: 3/6;
     grid-column: 2/4;
+    @media only screen and (min-width: 768px) {
+      grid-column: 3/4;
+      grid-row: 3/5;
+      min-width: 278px;
+      width: 100%;
+      height: auto;
+    }
   }
   &:nth-child(5) {
     grid-row: 3/6;
     grid-column: 4/6;
     background: transparent;
     width: 100%;
+    @media only screen and (min-width: 768px) {
+      grid-row: 4/6;
+      min-height: 90px;
+      max-width: 170px;
+    }
   }
 }
 
@@ -59,4 +108,8 @@
   display: grid;
   grid-template-rows: [title] auto [date] auto auto;
   padding: 0 20px;
+}
+
+.skinnyJeans {
+  font-family: skinny;
 }
