--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1874,6 +1874,10 @@ video {
   --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.rotate-\[-190deg\] {
+  --tw-rotate: -190deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .rotate-6 {
   --tw-rotate: 6deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2307,6 +2311,10 @@ video {
 }
 .bg-sage-100 {
   background-color: var(--sage-100);
+}
+.bg-lfm-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 84 109 / var(--tw-bg-opacity));
 }
 .bg-gray-50 {
   --tw-bg-opacity: 1;
@@ -3548,6 +3556,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
+.hover\:bg-lfm-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 84 109 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -3678,6 +3690,10 @@ video {
 }
 .hover\:ring-sage-400:hover {
   --tw-ring-color: var(--sage-400);
+}
+.hover\:ring-lfm-blue-700:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(53 84 109 / var(--tw-ring-opacity));
 }
 .hover\:ring-primary-500:hover {
   --tw-ring-opacity: 1;
@@ -3829,6 +3845,10 @@ video {
 .active\:bg-secondary-500:active {
   background-color: var(--secondary-500);
 }
+.active\:bg-lfm-blue-700:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 84 109 / var(--tw-bg-opacity));
+}
 .active\:bg-sage-700:active {
   background-color: var(--sage-700);
 }
@@ -3854,6 +3874,11 @@ video {
 .active\:text-neutral-50:active {
   --tw-text-opacity: 1;
   color: rgb(252 250 251 / var(--tw-text-opacity));
+}
+.active\:ring-4:active {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .active\:ring:active {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -4013,6 +4038,12 @@ video {
   }
   .tablet\:left-\[40px\] {
     left: 40px;
+  }
+  .tablet\:bottom-\[-30px\] {
+    bottom: -30px;
+  }
+  .tablet\:right-\[200px\] {
+    right: 200px;
   }
   .tablet\:top-\[70\%\] {
     top: 70%;
@@ -4247,6 +4278,9 @@ video {
   .tablet\:h-\[450px\] {
     height: 450px;
   }
+  .tablet\:h-\[400px\] {
+    height: 400px;
+  }
   .tablet\:h-\[28px\] {
     height: 28px;
   }
@@ -4357,6 +4391,10 @@ video {
   }
   .tablet\:rotate-\[45deg\] {
     --tw-rotate: 45deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .tablet\:rotate-\[5deg\] {
+    --tw-rotate: 5deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .tablet\:grid-flow-row {
@@ -5600,6 +5638,22 @@ video {
     minmax(20px, 80px) minmax(20px, 140px) auto;
   grid-template-rows: auto auto minmax(10px, 10px) minmax(10px, 10px) 1fr;
 }
+@media only screen and (min-width: 768px) {
+.lfm-intro__cardsContent {
+    position: relative;
+    top: auto;
+    left: auto;
+    transform: translateX(0);
+    width: auto;
+    max-width: 768px;
+    margin: 0 auto;
+    grid-template-columns: minmax(66px, 66px) auto auto auto auto;
+    grid-template-rows: 25px 37px minmax(10px, 110px) minmax(10px, 70px) 1fr minmax(
+        10px,
+        10px
+      )
+}
+  }
 .lfm-intro__font {
   width: 196px;
   overflow: hidden;
@@ -5613,6 +5667,16 @@ video {
     width: 208px;
     background: transparent;
   }
+@media only screen and (min-width: 768px) {
+.lfm-intro__font:first-child {
+      min-width: 264px;
+      min-height: 145px;
+      width: 100%;
+      height: 100%;
+      grid-column: 1/3;
+      grid-row: 1/4
+  }
+    }
 .lfm-intro__font:nth-child(2) {
     height: 138px; /*177px*/
     width: 265px;
@@ -5620,6 +5684,15 @@ video {
     grid-column: 3/5;
     background: transparent;
   }
+@media only screen and (min-width: 768px) {
+.lfm-intro__font:nth-child(2) {
+      grid-column: 4/6;
+      grid-row: 2/4;
+      min-width: 228px;
+      height: 100%;
+      width: 100%
+  }
+    }
 .lfm-intro__font:nth-child(3) {
     height: 111px;
     background: transparent;
@@ -5627,6 +5700,14 @@ video {
     grid-row: 4;
     width: auto;
   }
+@media only screen and (min-width: 768px) {
+.lfm-intro__font:nth-child(3) {
+      grid-column: 2/3;
+      grid-row: 4/7;
+      height: auto;
+      min-height: 131px
+  }
+    }
 .lfm-intro__font:nth-child(4) {
     height: 143px;
     width: 215px;
@@ -5634,17 +5715,36 @@ video {
     grid-row: 3/6;
     grid-column: 2/4;
   }
+@media only screen and (min-width: 768px) {
+.lfm-intro__font:nth-child(4) {
+      grid-column: 3/4;
+      grid-row: 3/5;
+      min-width: 278px;
+      width: 100%;
+      height: auto
+  }
+    }
 .lfm-intro__font:nth-child(5) {
     grid-row: 3/6;
     grid-column: 4/6;
     background: transparent;
     width: 100%;
   }
+@media only screen and (min-width: 768px) {
+.lfm-intro__font:nth-child(5) {
+      grid-row: 4/6;
+      min-height: 90px;
+      max-width: 170px
+  }
+    }
 .lfm-intro__header {
   grid-column: 1/-1;
   display: grid;
   grid-template-rows: [title] auto [date] auto auto;
   padding: 0 20px;
+}
+.skinnyJeans {
+  font-family: skinny;
 }
 .root,
 :root,
