--- a/app/components/lfm/lfm.css
+++ b/app/components/lfm/lfm.css
@@ -24,6 +24,18 @@
         10px
       );
   }
+
+  @media only screen and (min-width: 1024px) {
+    grid-template-columns: 100px minmax(98px, 98px) auto;
+    grid-template-rows: auto;
+    margin: 30px 0 0 90px;
+  }
+
+  @media only screen and (min-width: 1280px) {
+    grid-template-columns: auto minmax(10px, 25px) auto;
+    grid-template-rows: auto;
+    margin: 30px 0 0 140px;
+  }
 }
 
 .lfm-intro__font {
@@ -47,6 +59,13 @@
       grid-column: 1/3;
       grid-row: 1/4;
     }
+
+    @media only screen and (min-width: 1024px) {
+      grid-row: 3/5;
+      grid-column: 1/4;
+      min-width: 260px;
+      min-height: 169px;
+    }
   }
 
   &:nth-child(2) {
@@ -55,6 +74,7 @@
     grid-row: 1/4;
     grid-column: 3/5;
     background: transparent;
+
     @media only screen and (min-width: 768px) {
       grid-column: 4/6;
       grid-row: 2/4;
@@ -62,7 +82,23 @@
       height: 100%;
       width: 100%;
     }
+
+    @media only screen and (min-width: 1024px) {
+      min-width: 264px;
+      min-height: 176px;
+      grid-column: 4/6;
+      grid-row: 2/4;
+
+      & > div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
+
   &:nth-child(3) {
     height: 111px;
     background: transparent;
@@ -73,9 +109,16 @@
       grid-column: 2/3;
       grid-row: 4/7;
       height: auto;
+      min-height: auto;
+    }
+    @media only screen and (min-width: 1024px) {
+      min-width: 196px;
+      grid-row: 5/7;
+      grid-column: 1/3;
       min-height: 131px;
     }
   }
+
   &:nth-child(4) {
     height: 143px;
     width: 215px;
@@ -89,7 +132,23 @@
       width: 100%;
       height: auto;
     }
+    @media only screen and (min-width: 1024px) {
+      min-width: 308px;
+      min-height: 203px;
+      grid-row: 1;
+      grid-column: 2/5;
+      z-index: -1;
+
+      & > div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
+
   &:nth-child(5) {
     grid-row: 3/6;
     grid-column: 4/6;
@@ -97,8 +156,23 @@
     width: 100%;
     @media only screen and (min-width: 768px) {
       grid-row: 4/6;
-      min-height: 90px;
-      max-width: 170px;
+      min-height: auto;
+      max-width: 182px;
+    }
+    @media only screen and (min-width: 1024px) {
+      min-width: 232px;
+      min-height: 124px;
+      grid-column: 4/5;
+      grid-row: 4/6;
+      max-width: none;
+
+      & > div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 }
@@ -108,8 +182,85 @@
   display: grid;
   grid-template-rows: [title] auto [date] auto auto;
   padding: 0 20px;
+
+  @media only screen and (min-width: 1024px) {
+    grid-column: 2/12;
+    grid-row: 1/2;
+    padding: 0;
+    grid-template-rows: [date] 1fr [title] auto auto;
+    z-index: 3;
+  }
 }
 
 .skinnyJeans {
   font-family: skinny;
+}
+
+.lfm-myFonts {
+  margin: 60px auto;
+  grid-template-rows: 70px auto auto;
+  grid-row-gap: 0;
+  position: relative;
+  min-height: 375px;
+}
+.lfm-myFonts__fontsBg::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: #fff;
+  content: "";
+
+  @media only screen and (min-width: 768px) {
+    height: 130px;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    height: 99px;
+  }
+}
+.lfm-myFonts__fonts {
+  display: grid;
+  grid-template-rows: 24px auto auto;
+  grid-template-columns: 63px auto 1fr 63px;
+  position: relative;
+
+  @media only screen and (min-width: 768px) {
+    grid-template-columns: 103px auto 1fr 103px;
+  }
+  @media only screen and (min-width: 1024px) {
+    grid-template-rows: 34px auto auto;
+  }
+}
+
+.lfm-myFonts__font {
+  &:first-child {
+    grid-row: 1/3;
+    grid-column: 1/3;
+    width: 205.5px;
+  }
+  &:nth-child(2) {
+    grid-row: 2/3;
+    grid-column: 3/5;
+  }
+  &:nth-child(3) {
+    grid-row: 3/4;
+    grid-column: 2/4;
+  }
+  &:nth-child(-n + 3) {
+    box-shadow: 0 30px 30px rgb(0 0 0 / 13%);
+  }
+
+  @media only screen and (min-width: 768px) {
+    &:first-child {
+      width: 280.5px;
+    }
+  }
+
+  @media only screen and (min-width: 1024px) {
+    &:first-child {
+      width: 275.9px;
+    }
+  }
 }
